模拟编码 指令1.启动格口开关 2.打开清运门 3.查询格口门状态 4.查询格口重量 socket日志 socket下发缓存db

--- a/app/src/main/res/drawable/btn_open_close_bg.xml
+++ b/app/src/main/res/drawable/btn_open_close_bg.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
+        《
         <shape android:shape="rectangle">
-            <gradient android:centerX="270"
-                android:type="linear"
+            <corners android:radius="@dimen/dp_5" />
+            <gradient
                 android:angle="315"
-                android:startColor="#1365FF"
                 android:centerColor="#112788"
-                android:endColor="#1A5FFE"/>
+                android:centerX="270"
+                android:endColor="#1A5FFE"
+                android:startColor="#1365FF"
+                android:type="linear" />
         </shape>
     </item>
 
