--- a/app/src/main/res/layout/fragment_tou_double.xml
+++ b/app/src/main/res/layout/fragment_tou_double.xml
@@ -157,6 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
+                        android:layout_marginBottom="@dimen/dp_5"
                         android:text="可再投递(kg)：40.00"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_12"
@@ -171,7 +172,7 @@
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"
                         android:src="@drawable/ic_my1"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
@@ -224,7 +225,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/dp_10"
-                        android:layout_marginTop="@dimen/dp_2"
+                        android:layout_marginBottom="@dimen/dp_5"
                         android:text="可再投递(kg)：40.00"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp_12"
@@ -239,8 +240,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="fitXY"
-                        android:src="@drawable/ic_my1"
-                        android:visibility="invisible"
+                        android:src="@drawable/ic_gz2"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
