--- a/app/src/main/res/layout/fragment_tou_single.xml
+++ b/app/src/main/res/layout/fragment_tou_single.xml
@@ -127,7 +127,7 @@
                     android:layout_marginTop="@dimen/dp_2"
                     android:text="可再投递(kg)：40.00"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/sp_18"
+                    android:textSize="@dimen/sp_15"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -138,7 +138,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/logo"
+                android:id="@+id/aciv_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_14"
@@ -240,13 +240,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         <!--状态-->
         <androidx.appcompat.widget.AppCompatImageView
-            android:visibility="gone"
             android:id="@+id/aciv_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_gzda"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
